server change for peer id

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -66,6 +66,7 @@
   <script src="assets/js/mode/php/php.js"></script>
   <script src="assets/js/mode/coffeescript/coffeescript.js"></script>
   <script src="assets/js/mode/xml/xml.js"></script>
+  <script src="assets/js/mode/jsx/jsx.js"></script>
   <script src="assets/js/mode/markdown/markdown.js"></script>
 
 
